# claude-container

./: .gitignore  CLAUDE.md  README.md  devenv.nix  flake.nix  go.mod  go.sum  main.go
.claude/: settings.json
.claude/hooks/: docker-guard.sh
cmd/: attach.go  auth.go  auth_test.go  build.go  conversations.go  doctor.go  doctor_test.go  e2e_test.go  extract.go  fix-perms.go  gc.go  logs.go  new.go  ps.go  rm.go  root.go  root_test.go  run.go  security_e2e_test.go  shell.go  stop.go  task.go  task_parser.go  task_parser_test.go  tui.go  work.go  workspace.go
docker/: entrypoint.sh
docs/plans/: 2026-02-18-claude-container-design.md  2026-02-18-implementation-plan.md  2026-02-18-pty-proxy-design.md  2026-02-18-pty-proxy-implementation.md  2026-02-19-http-proxy-design.md  2026-02-19-http-proxy-implementation.md  2026-02-19-nix-docker-image-design.md  2026-02-19-nix-docker-image.md  2026-02-20-task-mode-design.md  (+22 more)
internal/: exec.go
nix/: image.nix  managed-settings.nix  proxy-image.nix
proxy/: pyproject.toml
proxy/claude_proxy/: addon.py  app.py  dashboard.py  patterns.py  rules.py  userallow.py
proxy/publish-mgr/: counters.go  counters_test.go  go.mod  main.go  userallow.go  userallow_test.go
proxy/static/: app.js  index.html  style.css
proxy/tests/: test_addon.py  test_dashboard.py  test_integration.py  test_patterns.py  test_rules.py  test_userallow.py
proxy/udp-redir/: api.go  dnsparse.go  dnsparse_test.go  go.mod  go.sum  holdbuf.go  holdbuf_test.go  ipparse.go  ipparse_test.go  main.go  rules.go  rules_test.go
scripts/: run-security-tests.sh
(+47 files in other folders)
