[project]
name = "claude-proxy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
